fix: add text-wrap property to hero area title for improved text handling

--- a/sass/components/_hero-area.scss
+++ b/sass/components/_hero-area.scss
@@ -46,5 +46,6 @@
     color: $clr-white;
     text-transform: uppercase;
     font-weight: $fw-light;
+    text-wrap: wrap;
   }
 }
